[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/player/idle/adventurer-idle-00.png" type="Texture" id=1]
[ext_resource path="res://assets/player/idle/adventurer-idle-02.png" type="Texture" id=2]
[ext_resource path="res://assets/player/idle/adventurer-idle-01.png" type="Texture" id=3]
[ext_resource path="res://assets/player/run/adventurer-run-01.png" type="Texture" id=4]
[ext_resource path="res://assets/player/run/adventurer-run-04.png" type="Texture" id=5]
[ext_resource path="res://assets/player/run/adventurer-run-03.png" type="Texture" id=6]
[ext_resource path="res://assets/player/idle/adventurer-idle-03.png" type="Texture" id=7]
[ext_resource path="res://assets/player/run/adventurer-run-05.png" type="Texture" id=8]
[ext_resource path="res://assets/player/run/adventurer-run-02.png" type="Texture" id=9]
[ext_resource path="res://assets/player/run/adventurer-run-00.png" type="Texture" id=10]
[ext_resource path="res://function/entities/player.gd" type="Script" id=11]
[ext_resource path="res://assets/player/items/watch-broken.png" type="Texture" id=12]
[ext_resource path="res://function/entities/watch.gd" type="Script" id=13]
[ext_resource path="res://assets/player/items/glow.png" type="Texture" id=14]
[ext_resource path="res://assets/player/items/hour-hand.png" type="Texture" id=15]
[ext_resource path="res://assets/player/items/minute-hand.png" type="Texture" id=16]
[ext_resource path="res://assets/player/items/second-hand.png" type="Texture" id=17]
[ext_resource path="res://function/entities/watchHands.gd" type="Script" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.75, 6.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.9375, 5 )

[node name="entities" type="Node2D"]

[node name="player" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 0, -200 )
scale = Vector2( 2, 2 )
collision_mask = 0
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="animation" type="AnimatedSprite" parent="player"]
position = Vector2( 8.5, 12 )
frames = SubResource( 1 )
animation = "idle"

[node name="collision" type="CollisionShape2D" parent="player"]
position = Vector2( 8.66667, 15 )
shape = SubResource( 2 )

[node name="watch" type="Area2D" parent="."]
visible = false
position = Vector2( 70, -200 )
scale = Vector2( 2, 2 )
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="glow" type="Sprite" parent="watch"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 10, 28 )
texture = ExtResource( 14 )

[node name="sprite" type="Sprite" parent="watch"]
position = Vector2( 10, 28 )
texture = ExtResource( 12 )

[node name="collision" type="CollisionShape2D" parent="watch"]
position = Vector2( 10.75, 50.25 )
shape = SubResource( 3 )

[node name="secondHand" type="Area2D" parent="."]
visible = false
position = Vector2( 207, -200 )
scale = Vector2( 2, 2 )
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="glow" type="Sprite" parent="secondHand"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 4.5, 6 )
texture = ExtResource( 14 )

[node name="sprite" type="Sprite" parent="secondHand"]
position = Vector2( 4, 13 )
scale = Vector2( 2, 2 )
texture = ExtResource( 17 )

[node name="collision" type="CollisionShape2D" parent="secondHand"]
position = Vector2( 5, 5 )
shape = SubResource( 4 )

[node name="minuteHand" type="Area2D" parent="."]
visible = false
position = Vector2( 331, -200 )
scale = Vector2( 2, 2 )
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="glow" type="Sprite" parent="minuteHand"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 4.5, 6 )
texture = ExtResource( 14 )

[node name="sprite" type="Sprite" parent="minuteHand"]
position = Vector2( 0, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="collision" type="CollisionShape2D" parent="minuteHand"]
position = Vector2( 5, 5 )
shape = SubResource( 4 )

[node name="hourHand" type="Area2D" parent="."]
visible = false
position = Vector2( 456, -200 )
scale = Vector2( 2, 2 )
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="glow" type="Sprite" parent="hourHand"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 4.5, 6 )
texture = ExtResource( 14 )

[node name="sprite" type="Sprite" parent="hourHand"]
position = Vector2( 7, 6 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="collision" type="CollisionShape2D" parent="hourHand"]
position = Vector2( 5, 5 )
shape = SubResource( 4 )
